fix input text alignment

--- a/aquamarine-biology.css
+++ b/aquamarine-biology.css
@@ -61,7 +61,7 @@ textarea {
 	box-shadow: none !important;
 	text-shadow: none !important;
 	color: #19765d !important;
-	text-align: center;
+	text-align: left;
 	object-position: center;
 }
 
